[gd_scene load_steps=11 format=3 uid="uid://iiv2r3hgpisw"]

[ext_resource type="Script" uid="uid://c2du7tr1yohwy" path="res://Skript/Tree.gd" id="1_7rxtg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bocuv"]
albedo_color = Color(0.548758, 0.250915, 1.54018e-06, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7rxtg"]
material = SubResource("StandardMaterial3D_bocuv")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s53wf"]
albedo_color = Color(0.548758, 0.250915, 1.54018e-06, 1)

[sub_resource type="BoxMesh" id="BoxMesh_cwwtg"]
material = SubResource("StandardMaterial3D_s53wf")
size = Vector3(1, 2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p8w82"]
albedo_color = Color(0.548758, 0.250915, 1.54018e-06, 1)

[sub_resource type="BoxMesh" id="BoxMesh_tkib6"]
material = SubResource("StandardMaterial3D_p8w82")
size = Vector3(1, 3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_d64ee"]

[sub_resource type="BoxShape3D" id="BoxShape3D_eqmwi"]
size = Vector3(1, 2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_qi34g"]
size = Vector3(1, 3, 1)

[node name="Tree" type="Node3D"]
script = ExtResource("1_7rxtg")

[node name="sprout_mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_7rxtg")

[node name="young_mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_cwwtg")

[node name="grown_mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_tkib6")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 14
collision_mask = 0

[node name="sprout_collision" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_d64ee")

[node name="young_collision" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_eqmwi")

[node name="grown_collision" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_qi34g")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
